polish: change about-cn style

--- a/layouts/partials/particles.html
+++ b/layouts/partials/particles.html
@@ -12,13 +12,13 @@ const particlesConfig = {
       }
     },
     color: {
-      value: '#ffffff'
+      value: '#000000'
     },
     shape: {
       type: 'polygon',
       stroke: {
         width: 0,
-        color: '#000000'
+        color: '#ffffff'
       },
       polygon: {
         nb_sides: 5
@@ -52,7 +52,7 @@ const particlesConfig = {
     line_linked: {
       enable: true,
       distance: 150,
-      color: '#ffffff',
+      color: '#000000',
       opacity: 0.4,
       width: 1
     },
