--- a/src/less/about.less
+++ b/src/less/about.less
@@ -8,6 +8,12 @@
 @purple_blue: #202884;
 @bg_gray_white: #fafafa;
 @tidb_red: #e6002d;
+
+// width
+@video_width: 924px;
+// height
+@video_height: calc(~'@{video_width}* 9/16');
+
 // line
 @1px_hr_width: 1.9rem;
 
@@ -24,6 +30,7 @@ section[class^='meetup-landingpage-'] {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: @video_width;
   }
 
   .title {
@@ -100,8 +107,8 @@ section[class^='meetup-landingpage-'] {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 924px;
-    height: 520px;
+    width: @video_width;
+    height: @video_height;
     box-shadow: 2px 2px 22px rgba(255, 255, 255, 0.5);
     background: transparent
       url('https://download.pingcap.com/images/poster.jpg') no-repeat 0 0;
@@ -124,11 +131,16 @@ section[class^='meetup-landingpage-'] {
   }
 }
 
-.about-founders {
+.about-company {
   background: @bg_gray_white;
+}
+
+.about-founders {
+  // background: @bg_gray_white;
+  background: @white;
 
   .image-wrap {
-    max-width: 31.5rem;
+    max-width: 26rem;
     margin: 4.5rem auto 0;
 
     img {
@@ -139,6 +151,8 @@ section[class^='meetup-landingpage-'] {
 }
 
 .about-culture {
+  background: @bg_gray_white;
+
   .details {
     display: flex;
     flex-direction: column;
@@ -205,7 +219,8 @@ section[class^='meetup-landingpage-'] {
   background: @bg_gray_white;
 
   .info {
-    padding: 0.5rem 0.75rem 2rem;
+    // width: 100%;
+    padding: 0.5rem 0 2rem;
     font-size: 0.7rem;
 
     .row {
@@ -262,7 +277,7 @@ section[class^='meetup-landingpage-'] {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: #000;
+  background-color: #fff;
   background-image: url('');
   background-repeat: no-repeat;
   background-size: cover;
