--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -23,10 +23,11 @@
 .weekly,
 .meetup,
 .recruit {
-  padding: 0 @horizontal_padding;
+  // padding: 0 @horizontal_padding;
   min-height: calc(~'100vh - 257px');
 
   .container {
+    padding: 0 @horizontal_padding;
     flex-flow: row wrap;
   }
 
@@ -142,6 +143,7 @@
     h1,
     h2,
     h3 {
+      margin-top: 0;
       padding-top: 1.5rem;
     }
   }
@@ -195,8 +197,6 @@
 
 .doc .archive {
   padding-top: @header_height;
-  // position: relative;
-  // top: @header_height;
 }
 
 // smarttoc-extender global
