polish: change background for about page

--- a/src/less/about.less
+++ b/src/less/about.less
@@ -216,7 +216,7 @@ section[class^='meetup-landingpage-'] {
 }
 
 .about-contact {
-  background: @bg_gray_white;
+  background: @white;
 
   .info {
     // width: 100%;
