--- a/layouts/page/index-cn.html
+++ b/layouts/page/index-cn.html
@@ -14,15 +14,15 @@
         font-weight: 300 !important;
       }
 
-      header {
+      /*header {
           position: fixed;
           background-color: rgba(0, 0, 0, 0) !important;
           z-index: 99;
-      }
+      }*/
 
-      header.fixed-top {
+      /*header.fixed-top {
           background-color: rgba(0, 0, 0, 0.9) !important;
-      }
+      }*/
   </style>
 {{ end }}
 
