--- a/layouts/partials/header-cn.html
+++ b/layouts/partials/header-cn.html
@@ -1,6 +1,6 @@
 {{ $nav_active := $.Scratch.Get "nav_active" }}
 
-<header id="header" role="navigation" {{ if eq $nav_active "docs"}}style="position: fixed;"{{end}}>
+<header id="header" role="navigation" class="fixed-top">
   <div class="container">
     <a class="nav-brand" href="/"><img src="https://download.pingcap.com/images/pingcap_logo.png" alt="pingCAP"></a>
     <div class="nav-wrapper">
@@ -11,10 +11,9 @@
           <li {{ if eq $nav_active "meetup"}}class="sel"{{end}}><a href="/meetup">Meetup</a></li>
           <li {{ if eq $nav_active "about"}}class="sel"{{end}}><a href="/about-cn">关于</a></li>
         </ul>
-        <a class="link-download" href="https://pingcap.com/doc-ansible-deployment-zh">
+        <a class="link-download" href="/docs-cn/op-guide/ansible-deployment">
           {{ partial "svgs/icon-download-tidb.svg" (dict "fill" "#fff" "width" 20 "height" 20 ) }}
         </a>
-        <!-- <a class="btn-download" href="https://pingcap.com/doc-ansible-deployment-zh"> 下载 </a> -->
       </div>
       <div class="global-search">
         <button class="btn-search">{{ partial "svgs/icon-search.svg" (dict "fill" "#fff" "width" 20 "height" 20 ) }}</button>
