--- a/layouts/partials/navs/date-tree-nav.html
+++ b/layouts/partials/navs/date-tree-nav.html
@@ -1,6 +1,7 @@
 {{ $rss := .rss }}
 
-<div class="nav nav-tree sticky-sidebar">
+<div class="sidebar">
+  <div class="sticky-sidebar">
     <h1 class="title">
       {{ .title }}
       {{ if $rss }}
@@ -28,4 +29,5 @@
           </li>
        {{ end }}
     </ul>
+  </div>
 </div>
