--- a/layouts/partials/navs/tags-nav.html
+++ b/layouts/partials/navs/tags-nav.html
@@ -1,6 +1,6 @@
 {{ $rss := .rss }}
 
-<div class="nav nav-tags">
+<div class="sidebar nav-tags">
     <h1 class="title">
       {{ .title }}
       {{ if $rss }}
