--- a/layouts/recruit/single.html
+++ b/layouts/recruit/single.html
@@ -6,11 +6,13 @@
 {{ define "main" }}
 <div class="recruit">
   <div class="container">
-      <div class="nav nav-tree sticky-sidebar">
+      <div class="sidebar">
+        <div class="sticky-sidebar">
           <h1 class="title"> 招聘职位 </h1>
-          <div class="st_tree nav-tree-toc" style="display: none;">
+          <div class="st_tree nav-toc" style="display: none;">
             {{ partial "navs/tree-nav.html" (dict "tree" .Site.Data.recruit_toc "global" .) }}
           </div>
+        </div>
       </div>
 
       <div class="archive">
