--- a/src/less/header.less
+++ b/src/less/header.less
@@ -65,12 +65,12 @@ header {
             align-items: center;
             height: @nav_height;
             padding: 0.5rem 0.2rem;
-            border-bottom: 3px solid fade(white, 0%);
+            // border-bottom: 3px solid fade(white, 0%);
           }
           &.sel a,
           & a:hover {
-            border-bottom: 3px solid white;
-            color: fade(white, 70%);
+            // border-bottom: 3px solid white;
+            color: fade(white, 50%);
             transition: all 0.5s ease;
           }
         }
