--- a/layouts/docs-cn/list.html
+++ b/layouts/docs-cn/list.html
@@ -9,10 +9,12 @@
 {{ define "main" }}
 <div class="doc">
   <div class="container">
-    <div class="nav nav-tree sticky-sidebar">
-      <h1 class="title"> 文档 </h1>
-      <div class="st_tree nav-tree-toc" style="display: none;">
-        {{ partial "navs/tree-nav.html" (dict "tree" .Site.Data.docs_cn_toc "global" .) }}
+    <div class="sidebar">
+      <div class="sticky-sidebar">
+        <h1 class="title"> 文档 </h1>
+        <div class="st_tree nav-toc" style="display: none;">
+          {{ partial "navs/tree-nav.html" (dict "tree" .Site.Data.docs_cn_toc "global" .) }}
+        </div>
       </div>
     </div>
 
@@ -21,11 +23,16 @@
         {{ with .Site.GetPage "page" "docs-cn/overview.md" }}{{.Content}}{{ end }}
       </div>
       <div class="article-toc"></div>
-      {{ partial "improve-doc.html" (dict "repo" "docs-cn" "global" . "isCn" "true") }}
+
       {{ partial "archives/operate-links.html" (dict "global" . "isCn" "true") }}
     </div>
 
-    <div id="smarttoc_wrapper" class="sticky-sidebar"></div>
+    <div class="sidebar-page sticky-sidebar">
+      {{ partial "improve-doc.html" (dict "repo" "docs-cn" "global" . "isCn" "true") }}
+      <p class="toc-title">What's on this Page</p>
+      <div id="smarttoc_wrapper"></div>
+    </div>
+
   </div>
 </div>
 {{ end }}
