--- a/layouts/meetup/single.html
+++ b/layouts/meetup/single.html
@@ -6,32 +6,27 @@
 {{ define "main" }}
 <div class="meetup">
   <div class="container">
+  <!-- categore: memoir/ record -->
+  {{ $blogs := where (where .Site.Pages "Section" "meetup") ".Params.title" "!=" nil }}
+  {{ partial "navs/date-tree-nav.html" (dict "title" "Meetup" "data" $blogs ) }}
 
-    <div class="nav nav-tree sticky-sidebar">
-      <h1 class="title"> 干货实录 </h1>
-      <div class="st_tree">
-        {{ $blogs := where (where .Site.Pages "Section" "meetup") ".Params.title" "!=" nil }}
-        {{ partial "navs/date-tree-nav.html" (dict "data" $blogs) }}
-      </div>
+  <div class="archive">
+    <div class="content markdown-body">
+      <h1 class="title">{{ .Title }}</h1>
+      <ul class="blog-post-meta">
+        <li class="meta-item">
+          {{ partial "svgs/icon-date.svg" (dict "fill" "#040000" "width" 14 "height" 16 ) }}
+          {{ .Date.Format "Mon, Jan 2, 2006" }}
+        </li>
+        <li class="meta-item">
+          {{ partial "svgs/icon-author.svg" (dict "fill" "#040000" "width" 18 "height" 18 ) }}
+          {{ range .Params.author }} {{ . }}  {{ end }}
+        </li>
+      </ul>
+      <div class="blog-text">{{ .Content }}</div>
     </div>
 
-    <div class="archive">
-      <div class="content markdown-body">
-        <h1 class="title">{{ .Title }}</h1>
-        <ul class="blog-post-meta">
-          <li class="meta-item">
-            {{ partial "svgs/icon-date.svg" (dict "fill" "#040000" "width" 14 "height" 16 ) }}
-            {{ .Date.Format "Mon, Jan 2, 2006" }}
-          </li>
-          <li class="meta-item">
-            {{ partial "svgs/icon-author.svg" (dict "fill" "#040000" "width" 18 "height" 18 ) }}
-            {{ range .Params.author }} {{ . }}  {{ end }}
-          </li>
-        </ul>
-        <div class="blog-text">{{ .Content }}</div>
-      </div>
-
-      {{ partial "archives/operate-links.html" (dict "global" . "isCn" "true") }}
+    {{ partial "archives/operate-links.html" (dict "global" . "isCn" "true") }}
     </div>
   </div>
 </div>
