--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -11,7 +11,7 @@
           font-weight: 300 !important;
       }
 
-      header {
+      /*header {
           position: fixed;
           background-color: rgba(0, 0, 0, 0) !important;
           z-index: 99;
@@ -19,7 +19,7 @@
 
       header.fixed-top {
           background-color: rgba(0, 0, 0, 0.9) !important;
-      }
+      }*/
   </style>
 {{ end }}
 
