--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
 {{ $nav_active := $.Scratch.Get "nav_active" }}
 
-<header id="header" role="navigation" {{ if eq $nav_active "docs"}}style="position: fixed;"{{end}}>
+<header id="header" role="navigation" class="fixed-top">
   <div class="container">
     <a class="nav-brand" href="/"><img src="https://download.pingcap.com/images/pingcap_logo.png" alt="pingCAP"></a>
     <div class="nav-wrapper">
@@ -8,13 +8,12 @@
         <ul>
           <li {{ if eq $nav_active "docs"}}class="sel"{{end}}><a href="/docs">Docs</a></li>
           <li {{ if eq $nav_active "blog"}}class="sel"{{end}}><a href="/blog">Blog</a></li>
-          <li {{ if eq $nav_active ""}}class="sel"{{end}}><a href="/weekly">Weekly</a></li>
+          <li {{ if eq $nav_active "weekly"}}class="sel"{{end}}><a href="/weekly">Weekly</a></li>
           <li {{ if eq $nav_active "about"}}class="sel"{{end}}><a href="/about">About</a></li>
         </ul>
-        <a class="link-download" href="https://pingcap.com/doc-ansible-deployment">
+        <a class="link-download" href="/docs/op-guide/ansible-deployment">
           {{ partial "svgs/icon-download-tidb.svg" (dict "fill" "#fff" "width" 20 "height" 20 ) }}
         </a>
-        <!-- <a class="btn-download" href="https://pingcap.com/doc-ansible-deployment-zh"> 下载 </a> -->
       </div>
       <div class="global-search">
         <button class="btn-search">{{ partial "svgs/icon-search.svg" (dict "fill" "#fff" "width" 20 "height" 20 ) }}</button>
