chore: fixed improve-this-page link url

--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -45,6 +45,9 @@
   .sidebar-page {
     display: flex;
     flex-direction: column;
+    a {
+      text-decoration: underline;
+    }
     .improve-doc,
     .toc-title {
       margin-bottom: 10px;
@@ -243,10 +246,19 @@
     .list,
     .archive {
       flex-basis: 100%;
+      margin: 30px 0;
     }
-  }
-
-  .doc .sidebar {
-    padding-top: 140px;
+    .sidebar {
+      flex: 100%;
+      padding-top: 140px;
+      overflow: auto;
+    }
+    .sidebar .tag-list {
+      margin-left: -5px;
+    }
+    .sidebar-page {
+      min-height: calc(~'100vh - 280px');
+      overflow: auto;
+    }
   }
 }
