polish: fixed video pause event in safari issue and update todo

--- a/layouts/page/about-cn.html
+++ b/layouts/page/about-cn.html
@@ -45,14 +45,16 @@ function init() {
 
 <section class="intro-video">
   {{ partial "particles.html" }}
+  <div class="video-wrapper">
     <video id="video" poster="https://download.pingcap.com/images/poster.jpg">
       <source src="https://download.pingcap.com/videos/PingCAP-intro.mp4"
           type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'/>
-          Your browser dosen't support
+          Your browser does not support the video tag.
     </video>
-    <div id="video-button">
-      {{ partial "svgs/icon-play-button.svg" (dict "fill" "#fff" "width" 60 "height" 60 ) }}
+    <div id="video-control">
+      <span class="icon">{{ partial "svgs/icon-play-button.svg" (dict "fill" "#fff" "width" 60 "height" 60 ) }}</span>
     </div>
+  </div>
 </section>
 <section class="about-company">
   <div class="container">
