--- a/src/less/about.less
+++ b/src/less/about.less
@@ -102,11 +102,8 @@ section[class^='meetup-landingpage-'] {
   height: calc(~'100vh - @{header_height}');
   padding: 0;
 
-  #video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  .video-wrapper {
+    .f-vhc();
     width: @video_width;
     height: @video_height;
     box-shadow: 2px 2px 22px rgba(255, 255, 255, 0.5);
@@ -118,16 +115,21 @@ section[class^='meetup-landingpage-'] {
     background-size: cover;
     z-index: auto;
     .customAnimation(@animation_fadein);
-  }
 
-  #video-button {
-    position: absolute;
-    width: 42px;
-    height: 42px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    cursor: pointer;
+    video {
+      width: 100%;
+      height: 100%;
+    }
+
+    #video-control {
+      width: 100%;
+      height: 80%;
+      .f-vhc();
+
+      .icon {
+        .f-vhc();
+      }
+    }
   }
 }
 
