--- a/src/less/base.less
+++ b/src/less/base.less
@@ -324,6 +324,12 @@ h4 {
   top: 50%;
   transform: translateY(-50%);
 }
+.f-vhc {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
 
 .f-dft,
 .f-dft * {
