polish: show first item in list page sidebar by default

--- a/layouts/docs-cn/list.html
+++ b/layouts/docs-cn/list.html
@@ -7,7 +7,7 @@
 {{ end }}
 
 {{ define "main" }}
-<div class="doc">
+<div class="doc" id='list_page'>
   <div class="container">
     <div class="sidebar">
       <div class="sticky-sidebar">
