--- a/layouts/weekly/list.html
+++ b/layouts/weekly/list.html
@@ -5,7 +5,7 @@
 {{ end }}
 
 {{ define "main" }}
-<div class="weekly">
+<div class="weekly" id='list_page'>
     <div class="container">
       {{ $archives := where ( where .Site.Pages "Section" "weekly" ) ".Params.title" "!=" nil }}
       {{ partial "navs/date-tree-nav.html" (dict "data" $archives "title" "Weekly" "rss" "/weekly/index.xml") }}
