--- a/layouts/partials/navs/date-tree-nav.html
+++ b/layouts/partials/navs/date-tree-nav.html
@@ -8,26 +8,28 @@
         <a class="rss" href="{{.rss}}" title="RSS Feed">{{ partial "svgs/icon-rss.svg" (dict "fill" "#3A59F0" "width" 13 "height" 17 ) }}</a>
       {{ end}}
     </h1>
-    <ul class="st_tree" style="display:none;">
-        {{ range .data.GroupByDate "2006" }}
-          <li class="level-1 year-item has-child">
-            <a href="#"><i class="icon"></i>{{ .Key }} ({{ len .Pages }})</a>
-            <ul>
-                {{ range .Pages.GroupByDate "2006-01" }}
-                <li class="level-2 month-item has-child">
-                  <a href="#"><i class="icon"></i>{{ .Key }} ({{ len .Pages }})</a>
-                  <ul>
-                      {{ range .Pages }}
-                      <li class="leaf-child">
-                        <a href="{{ .URL }}">{{ partial "svgs/icon-file.svg" (dict "fill" "#000" "width" 14 "height" 14 ) }}{{ .Title }}</a>
-                      </li>
-                      {{ end }}
-                  </ul>
-                </li>
-                {{ end }}
-            </ul>
-          </li>
-       {{ end }}
-    </ul>
+    <div class="st_tree" style="display:none;">
+      <ul>
+          {{ range .data.GroupByDate "2006" }}
+            <li class="level-1 year-item has-child">
+              <a href="#"><i class="icon"></i>{{ .Key }} ({{ len .Pages }})</a>
+              <ul>
+                  {{ range .Pages.GroupByDate "2006-01" }}
+                  <li class="level-2 month-item has-child">
+                    <a href="#"><i class="icon"></i>{{ .Key }} ({{ len .Pages }})</a>
+                    <ul>
+                        {{ range .Pages }}
+                        <li class="leaf-child">
+                          <a href="{{ .URL }}">{{ partial "svgs/icon-file.svg" (dict "fill" "#000" "width" 14 "height" 14 ) }}{{ .Title }}</a>
+                        </li>
+                        {{ end }}
+                    </ul>
+                  </li>
+                  {{ end }}
+              </ul>
+            </li>
+         {{ end }}
+      </ul>
+    </div>
   </div>
 </div>
