polish: update improve-doc link style

--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -45,12 +45,14 @@
   .sidebar-page {
     display: flex;
     flex-direction: column;
-    a {
+    a.improve-doc {
+      display: flex;
+      align-items: center;
       text-decoration: underline;
     }
     .improve-doc,
     .toc-title {
-      margin-bottom: 10px;
+      margin-bottom: 12px;
       color: @title_color;
       font-size: 14px;
 
@@ -137,7 +139,6 @@
     }
     .operate {
       margin-top: 1.6rem;
-      // margin: 1.6rem 0;
       border-top: 2px solid #000;
       display: flex;
       flex-flow: row wrap;
@@ -168,7 +169,6 @@
       margin-bottom: 15px;
       line-height: 1.6;
       padding: 0;
-      // padding-top: 25px;
     }
   }
 
@@ -181,7 +181,7 @@
   #smarttoc {
     position: relative !important;
     left: initial !important;
-    padding: 0.5rem 0;
+    padding: 0 0 10px;
     border: none;
     border-color: transparent;
     border-left: 1px solid rgba(158, 158, 158, 0.22);
@@ -215,8 +215,8 @@
 .weekly,
 .recruit {
   .sidebar {
-      flex: 0 0 15rem;
-      max-width: 15rem;
+    flex: 0 0 15rem;
+    max-width: 15rem;
   }
   .nav-tags {
     padding: 20px 0;
