chore: fixed typos and styles in improve-this-page

--- a/layouts/docs-cn/list.html
+++ b/layouts/docs-cn/list.html
@@ -31,7 +31,7 @@
       {{ with .Site.GetPage "page" "docs-cn/overview.md" }}
         {{ partial "improve-doc.html" (dict "repo" "docs-cn" "global" . "isCn" "true") }}
       {{ end }}
-      <p class="toc-title">What's on this Page</p>
+      <p class="toc-title">本页导航</p>
       <div id="smarttoc_wrapper"></div>
     </div>
 
