--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -45,11 +45,6 @@
   .sidebar-page {
     display: flex;
     flex-direction: column;
-    a.improve-doc {
-      display: flex;
-      align-items: center;
-      text-decoration: underline;
-    }
     .improve-doc,
     .toc-title {
       margin-bottom: 12px;
@@ -59,6 +54,13 @@
       svg {
         margin-right: 5px;
       }
+    }
+
+    a.improve-doc {
+      display: flex;
+      align-items: center;
+      text-decoration: underline;
+      margin-bottom: 22px;
     }
   }
 
