--- a/layouts/docs-cn/single.html
+++ b/layouts/docs-cn/single.html
@@ -30,7 +30,7 @@
 
     <div class="sidebar-page sticky-sidebar">
       {{ partial "improve-doc.html" (dict "repo" "docs-cn" "global" . "isCn" "true") }}
-      <p class="toc-title">What's on this Page</p>
+      <p class="toc-title">本页导航</p>
       <div id="smarttoc_wrapper"></div>
     </div>
   </div>
