--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -30,7 +30,7 @@
           {{ with .Site.GetPage "page" "docs/overview.md" }}
             {{ partial "improve-doc.html" (dict "repo" "docs" "global" .) }}
           {{ end }}
-          <p class="toc-title">What's on this Page</p>
+          <p class="toc-title">What’s on this page</p>
           <div id="smarttoc_wrapper"></div>
         </div>
     </div>
