--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -30,7 +30,7 @@
 
     <div class="sidebar-page sticky-sidebar">
       {{ partial "improve-doc.html" (dict "repo" "docs" "global" .) }}
-      <p class="toc-title">What's on this Page</p>
+      <p class="toc-title">What’s on this page</p>
       <div id="smarttoc_wrapper"></div>
     </div>
   </div>
