polish: update header style in iphone5

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -77,7 +77,8 @@ header {
       }
 
       .link-download {
-        margin: 0 1rem 0 0.5rem;
+        // margin: 0 0.8rem 0 0.5rem;
+        margin: 0 0.5rem;
         &:hover {
           svg,
           svg * {
@@ -161,15 +162,24 @@ header {
     .navigations, .global-search {
       margin-bottom: @horizontal_padding;
     }
-
-    .navigations {
-      ul li {
-        margin: 0;
-      }
-    }
   }
 
   header .container .global-search .search-wrapper.show {
     width: 14rem;
+  }
+}
+
+// iphone 5
+@media screen and (max-width: 320px) {
+  header .nav-wrapper .navigations ul li {
+    margin: 0;
+    a {
+      padding-left: 4px;
+      padding-right: 4px;
+    }
+  }
+
+  header .nav-wrapper .navigations .link-download {
+    margin:0 4px;
   }
 }
