polish: change poster for video

--- a/layouts/page/about-cn.html
+++ b/layouts/page/about-cn.html
@@ -46,7 +46,7 @@ function init() {
 <section class="intro-video">
   {{ partial "particles.html" }}
   <div class="video-wrapper">
-    <video id="video" poster="https://download.pingcap.com/images/poster.jpg">
+    <video id="video" poster="https://download.pingcap.com/images/video-poster.jpg">
       <source src="https://download.pingcap.com/videos/PingCAP-intro.mp4"
           type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'/>
           Your browser does not support the video tag.
