--- a/src/less/about.less
+++ b/src/less/about.less
@@ -108,7 +108,7 @@ section[class^='meetup-landingpage-'] {
     height: @video_height;
     box-shadow: 2px 2px 22px rgba(255, 255, 255, 0.5);
     background: transparent
-      url('https://download.pingcap.com/images/poster.jpg') no-repeat 0 0;
+      url('https://download.pingcap.com/images/video-poster.jpg') no-repeat 0 0;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
