chore: hide search and Meetup entry

--- a/layouts/_default/baseof.tpl.html
+++ b/layouts/_default/baseof.tpl.html
@@ -39,7 +39,8 @@
 
   <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
   {{ block "footjs" . }}{{ end }}
-  {{ partial "search/algolia-js" . }}
+  <!-- TODO: hide search entry -->
+  <!-- {{ partial "search/algolia-js" . }} -->
 </body>
 
 </html>
