--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,13 +15,13 @@
           {{ partial "svgs/icon-download-tidb.svg" (dict "fill" "#fff" "width" 20 "height" 20 ) }}
         </a>
       </div>
-      <div class="global-search">
+      <!-- <div class="global-search">
         <button class="btn-search">{{ partial "svgs/icon-search.svg" (dict "fill" "#fff" "width" 20 "height" 20 ) }}</button>
         <div class="search-wrapper">
           {{ partial "search/ui.html" . }}
           <button class="btn-cancel">{{ partial "svgs/icon-cross.svg" (dict "fill" "#fff" "width" 10 "height" 10 ) }}</button>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </header>
