polish：update index page style

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -32,7 +32,7 @@
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  padding: calc(~'@{vertical_padding} + @{header_height}') @horizontal_padding;
+  padding: calc(~'@{vertical_padding} + @{header_height}') 0;
   background: url('/images/slogan-mask.png') no-repeat center top;
   background-attachment: fixed;
   background-size: cover;
@@ -50,6 +50,7 @@
 
   .container {
     flex-direction: column;
+    padding: 0 @horizontal_padding;
   }
 
   .logo {
@@ -130,7 +131,7 @@
 }
 /* Section 2 */
 .landingpage-features {
-  padding: calc(~'@{vertical_padding} + @{header_height}') @horizontal_padding;
+  padding: calc(~'@{vertical_padding} + @{header_height}') 0;
   background: url('/images/features-mask.png') no-repeat center top;
   background-attachment: fixed;
   background-size: cover;
@@ -142,6 +143,7 @@
   }
   .container {
     flex-direction: column;
+    padding: 0 @horizontal_padding;
   }
   .row {
     display: flex;
@@ -198,8 +200,7 @@
 }
 /* Section 3 */
 .landingpage-advantages {
-  padding: calc(~'@{vertical_padding} + @{header_height}') @horizontal_padding
-    10rem;
+  padding: calc(~'@{vertical_padding} + @{header_height}') 0 10rem;
   background: url('/images/advantages-mask.png') no-repeat center bottom
     @dark_blue;
   background-size: cover;
@@ -218,10 +219,10 @@
 
   .container {
     flex-direction: column;
+    padding: 0 @horizontal_padding;
   }
   .row {
     display: flex;
-    // flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
     margin-bottom: @advantage_row_margin;
