--- a/layouts/partials/header-cn.html
+++ b/layouts/partials/header-cn.html
@@ -8,20 +8,20 @@
         <ul>
           <li {{ if eq $nav_active "docs"}}class="sel"{{end}}><a href="/docs-cn">文档</a></li>
           <li {{ if eq $nav_active "blog"}}class="sel"{{end}}><a href="/blog-cn">博客</a></li>
-          <!-- <li {{ if eq $nav_active "meetup"}}class="sel"{{end}}><a href="/meetup">Meetup</a></li> -->
+          <li {{ if eq $nav_active "meetup"}}class="sel"{{end}}><a href="/meetup">Meetup</a></li>
           <li {{ if eq $nav_active "about"}}class="sel"{{end}}><a href="/about-cn">关于</a></li>
         </ul>
         <a class="link-download" href="/docs-cn/op-guide/ansible-deployment">
           {{ partial "svgs/icon-download-tidb.svg" (dict "fill" "#fff" "width" 20 "height" 20 ) }}
         </a>
       </div>
-      <!-- <div class="global-search">
+      <div class="global-search">
         <button class="btn-search">{{ partial "svgs/icon-search.svg" (dict "fill" "#fff" "width" 20 "height" 20 ) }}</button>
         <div class="search-wrapper">
           {{ partial "search/ui.html" . }}
           <button class="btn-cancel">{{ partial "svgs/icon-cross.svg" (dict "fill" "#fff" "width" 10 "height" 10 ) }}</button>
         </div>
-      </div> -->
+      </div>
     </div>
   </div>
 </header>
