chore: fixed weekly and meetup i18n_link in footer

--- a/layouts/meetup/archive.html
+++ b/layouts/meetup/archive.html
@@ -3,6 +3,7 @@
 {{ define "headcss" }}
   {{$.Scratch.Set "nav_active" "meetup"}}
   {{$.Scratch.Set "data_i18_cn" true }}
+  {{$.Scratch.Set "data_i18_link" "/weekly" }}
 {{ end }}
 
 {{ define "main" }}
