--- a/layouts/weekly/single.html
+++ b/layouts/weekly/single.html
@@ -1,5 +1,6 @@
 {{ define "headcss" }}
   {{$.Scratch.Set "nav_active" "weekly"}}
+  {{$.Scratch.Set "data_i18_link" "/meetup" }}
 {{ end }}
 
 {{ define "main" }}
