--- a/layouts/weekly/list.html
+++ b/layouts/weekly/list.html
@@ -2,6 +2,7 @@
 
 {{ define "headcss" }}
   {{$.Scratch.Set "nav_active" "weekly"}}
+  {{$.Scratch.Set "data_i18_link" "/meetup" }}
 {{ end }}
 
 {{ define "main" }}
