--- a/layouts/partials/navs/tags-nav.html
+++ b/layouts/partials/navs/tags-nav.html
@@ -25,7 +25,7 @@
 
           {{ if (gt $count  1) }}
             <!-- hide class for li, if less then 2 -->
-            <a href="#{{ $name| urlize }}" class="tag" data-tag="{{$name}}">
+            <a href="#{{ $name }}" class="tag" data-tag="{{$name}}">
               {{ $name }} ({{ $count }})
             </a>
           {{ end }}
