--- a/src/less/about.less
+++ b/src/less/about.less
@@ -10,7 +10,7 @@
 @tidb_red: #e6002d;
 
 // width
-@video_width: 924px;
+@video_width: 1124px;
 // height
 @video_height: calc(~'@{video_width}* 9/16');
 
@@ -104,6 +104,7 @@ section[class^='meetup-landingpage-'] {
 
   .video-wrapper {
     .f-vhc();
+    margin-top: 30px;
     width: @video_width;
     height: @video_height;
     box-shadow: 2px 2px 22px rgba(255, 255, 255, 0.5);
