polish: update search-box style and video style in mobile device

--- a/src/less/about.less
+++ b/src/less/about.less
@@ -289,10 +289,14 @@ section[class^='meetup-landingpage-'] {
 
 @media (max-width: 600px) {
   .intro-video {
-    height: calc(~'100vh - 117px');
-    #video {
+    .video-wrapper {
       width: 100%;
       height: auto;
+      margin-top: 60px;
+      #video {
+        width: 100%;
+        height: auto;
+      }
     }
   }
   .about-contact .info .row,
