--- a/src/less/header.less
+++ b/src/less/header.less
@@ -8,7 +8,7 @@
 @header_height: calc(~'1rem + @{nav_height} + 3px');
 
 // width
-@search_box_width: 14rem;
+@search_box_width: 13rem;
 
 header {
   width: 100%;
@@ -78,7 +78,7 @@ header {
 
       .link-download {
         // margin: 0 0.8rem 0 0.5rem;
-        margin: 0 0.5rem;
+        margin: 0 0.8rem 0 0.5rem;
         &:hover {
           svg,
           svg * {
@@ -134,7 +134,7 @@ header {
 
       #search-input {
         position: relative;
-        width: calc(~'@{search_box_width} - 2rem');
+        width: calc(~'@{search_box_width} - 1.2rem');
         height: 100%;
         padding: 0.5rem 0.5rem 0.5rem 1.5rem;
         border: none;
@@ -165,7 +165,7 @@ header {
   }
 
   header .container .global-search .search-wrapper.show {
-    width: 14rem;
+    width: 13rem;
   }
 }
 
