chore:  hide meetup link in weekly footer

--- a/layouts/weekly/list.html
+++ b/layouts/weekly/list.html
@@ -2,7 +2,8 @@
 
 {{ define "headcss" }}
   {{$.Scratch.Set "nav_active" "weekly"}}
-  {{$.Scratch.Set "data_i18_link" "/meetup" }}
+  <!-- TODO: change weekly to meetup -->
+  {{$.Scratch.Set "data_i18_link" "/weekly" }}
 {{ end }}
 
 {{ define "main" }}
