--- a/layouts/weekly/single.html
+++ b/layouts/weekly/single.html
@@ -1,6 +1,7 @@
 {{ define "headcss" }}
   {{$.Scratch.Set "nav_active" "weekly"}}
-  {{$.Scratch.Set "data_i18_link" "/meetup" }}
+  <!-- TODO: change weekly to meetup -->
+  {{$.Scratch.Set "data_i18_link" "/weekly" }}
 {{ end }}
 
 {{ define "main" }}
