--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -10,16 +10,6 @@
           font-family: 'Lato Light' !important;
           font-weight: 300 !important;
       }
-
-      /*header {
-          position: fixed;
-          background-color: rgba(0, 0, 0, 0) !important;
-          z-index: 99;
-      }
-
-      header.fixed-top {
-          background-color: rgba(0, 0, 0, 0.9) !important;
-      }*/
   </style>
 {{ end }}
 
@@ -30,7 +20,7 @@
         <h2 class="slogan">SQL at SCALE</h2>
         <h3 class="tagline">TiDB, an open source distributed HTAP database.</h3>
         <p class="desc">
-            Inspired by Google Spanner/F1, PingCAP develops TiDB, an open source distributed Hybrid Transactional/Analytical Processing (HTAP) database. TiDB features in infinite horizontal scalability, strong consistency, and high availability. The goal of TiDB
+            Inspired by Google Spanner/F1, PingCAP develops TiDB, an open source distributed Hybrid Transactional/Analytical Processing (HTAP) database. TiDB features infinite horizontal scalability, strong consistency, and high availability. The goal of TiDB
             is to serve as a one-stop solution for online transactions and analysis.
         </p>
         <div class="buttons">
@@ -83,7 +73,7 @@
                 <div class="image-wrap">
                     <span class="icon">{{ partial "svgs/icon-time.svg" (dict "fill" "#fff" "width" 34 "height" 34 ) }}</span>
                 </div>
-                <h3>7&#215;24 Service</h3>
+                <h3>24/7 Service</h3>
                 <p>A professional technical support team is always ready to respond to your request.</p>
             </div>
         </div>
