fix: fixed i18n in index.html

--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -1,5 +1,5 @@
 {{ define "headcss" }}
-  {{$.Scratch.Set "data_i18_link" "/" }}
+  {{$.Scratch.Set "data_i18_link" "/index.html" }}
   <style type="text/css" media="screen">
       body {
           background-image: linear-gradient(to top, #080000, #100f2e) !important;
