chore: fixed link to home in pingcap logo

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
 
 <header id="header" role="navigation" class="fixed-top">
   <div class="container">
-    <a class="nav-brand" href="/"><img src="https://download.pingcap.com/images/pingcap_logo.png" alt="pingCAP"></a>
+    <a class="nav-brand" href="/en"><img src="https://download.pingcap.com/images/pingcap_logo.png" alt="pingCAP"></a>
     <div class="nav-wrapper">
       <div class="navigations">
         <ul>
