polish: update pre-loading and optimize images

--- a/layouts/page/about-cn.html
+++ b/layouts/page/about-cn.html
@@ -23,7 +23,7 @@
 <script type="text/javascript">
 function init() {
   var map = new AMap.Map('map', {
-    resizeEnable: true,
+    zoomEnable: false,
     zoom: 15,
     center: [116.357273, 40.042345],
     mapStyle: 'amap://styles/light' //样式URL
