--- a/layouts/partials/header-cn.html
+++ b/layouts/partials/header-cn.html
@@ -2,7 +2,7 @@
 
 <header id="header" role="navigation" class="fixed-top">
   <div class="container">
-    <a class="nav-brand" href="/index.html"><img src="https://download.pingcap.com/images/pingcap_logo.png" alt="pingCAP"></a>
+    <a class="nav-brand" href="/index.html"><img src="/images/pingcap-logo.png" alt="PingCAP"></a>
     <div class="nav-wrapper">
       <div class="navigations">
         <ul>
