--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -14,123 +14,127 @@
 {{ end }}
 
 {{ define "main" }}
-<section class="landingpage-slogan-mask">
-    <div class="container">
-        <img class="logo" src="https://download.pingcap.com/images/tidb-logo.png" alt="TiDB">
-        <h2 class="slogan">SQL at SCALE</h2>
-        <h3 class="tagline">TiDB, an open source distributed HTAP database.</h3>
-        <p class="desc">
-            Inspired by Google Spanner/F1, PingCAP develops TiDB, an open source distributed Hybrid Transactional/Analytical Processing (HTAP) database. TiDB features infinite horizontal scalability, strong consistency, and high availability. The goal of TiDB
-            is to serve as a one-stop solution for online transactions and analysis.
-        </p>
-        <div class="buttons">
-            <a href="/docs" class="btn btn-primary f-fl" target="_blank"> GET STARTED </a>
-            <a href="http://github.com/pingcap" class="btn btn-github f-fl" target="_blank"> GitHub </a>
-        </div>
-    </div>
-</section>
-<section class="landingpage-features">
-    <div class="container">
-        <div class="row row-1">
-            <div class="item">
-                <div class="image-wrap">
-                    <span class="icon">{{ partial "svgs/icon-opensource.svg" (dict "fill" "#fff" "width" 34 "height" 31 ) }}</span>
-                </div>
-                <h3>OPEN SOURCE</h3>
-                <p>Born and bred in the community, TiDB is one of the most famous open source distributed databases.</p>
-            </div>
-            <div class="item item-long">
-                <div class="image-wrap">
-                    <span class="icon">{{ partial "svgs/icon-sql.svg" (dict "fill" "#fff" "width" 36 "height" 29 ) }}</span>
-                </div>
-                <h3>MYSQL COMPATIBILITY</h3>
-                <p>Use TiDB as a scalable MySQL. You can replace MySQL with TiDB to power your application without changing a single line of code in most cases.</p>
-            </div>
-            <div class="item item-long">
-                <div class="image-wrap">
-                    <span class="icon">{{ partial "svgs/icon-transaction.svg" (dict "fill" "#fff" "width" 34 "height" 26 ) }}</span>
-                </div>
-                <h3>DISTRIBUTED TRANSACTION</h3>
-                <p>Think of TiDB as a standalone RDBMS. You can start a transaction that crosses multiple machines without worrying about consistency. </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="item">
-                <div class="image-wrap">
-                    <span class="icon">{{ partial "svgs/icon-failover.svg" (dict "fill" "#fff" "width" 34 "height" 32 ) }}</span>
-                </div>
-                <h3>AUTOMATIC FAILOVER </h3>
-                <p>TiDB automatically handles malfunctions and protects your applications from machine failures or even downtime of an entire data-center. </p>
-            </div>
-            <div class="item">
-                <div class="image-wrap">
-                    <span class="icon">{{ partial "svgs/icon-ddl.svg" (dict "fill" "#fff" "width" 34 "height" 30 ) }}</span>
-                </div>
-                <h3>ONLINE DDL</h3>
-                <p>Evolve TiDB schemas as your requirement changes. You can add new columns and indices without stopping or affecting the on-going operations.</p>
-            </div>
-            <div class="item">
-                <div class="image-wrap">
-                    <span class="icon">{{ partial "svgs/icon-time.svg" (dict "fill" "#fff" "width" 34 "height" 34 ) }}</span>
-                </div>
-                <h3>24/7 Service</h3>
-                <p>A professional technical support team is always ready to respond to your request.</p>
-            </div>
-        </div>
-    </div>
-</section>
-<section class="landingpage-advantages">
-    <div class="container">
-        <div class="row">
-            <div class="image-wrap">
-                <img src="https://download.pingcap.com/images/diamond.png" alt="HORIZONTAL SCALING">
-            </div>
-            <div class="content">
-                <div class="text">
-                    <h3 class="title">HORIZONTAL SCALING</h3>
-                    <h4 class="subtitle">GO BEYOND YOUR LIMITS, IN DATA AND IN BUSINESS</h4>
-                    <p class="desc">Your business grows, so does your data. TiDB’s horizontal scalability enables the growth of a database by simply adding a new node to the cluster. You can expand your business without worrying about your infrastructure.</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="image-wrap">
-                <img src="https://download.pingcap.com/images/DNA.png" alt="HIGH AVAILIBILITY">
-            </div>
-            <div class="content">
-                <div class="text">
-                    <h3 class="title">HIGH AVAILIBILITY</h3>
-                    <h4 class="subtitle">YOUR DATA IS AN ALWAYS-ON ASSET</h4>
-                    <p class="desc">Your data and applications are always-on. All the outages are transparent to your applications and your data can recover automatically.</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="image-wrap">
-                <img src="https://download.pingcap.com/images/rocket.png" alt="CONSISTENT DISTRIBUTED TRANSACTION">
-            </div>
-            <div class="content">
-                <div class="text">
-                    <h3 class="title">CONSISTENT DISTRIBUTED TRANSACTION</h3>
-                    <h4 class="subtitle">NO MORE COMPROMISES, NO MORE EVENTUAL CONSISTENCY</h4>
-                    <p class="desc">Finally, your data is consistent from anywhere at any time. With a strong consistency guarantee, TiDB empowers your data scientists to focus on building great applications that create business values.</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="image-wrap">
-                <img src="https://download.pingcap.com/images/package.png" alt="EASE OF USE">
-            </div>
-            <div class="content">
-                <div class="text">
-                    <h3 class="title">EASE OF USE</h3>
-                    <h4 class="subtitle">ROCK YOUR DATA AS YOU DO IN MYSQL</h4>
-                    <p class="desc">Use TiDB as MySQL. You can replace MySQL with TiDB to power your application without changing a single line of code in most cases. Whether it’s online or offline, your data can be migrated to TiDB safely without affecting your ongoing
-                        operations.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+{{ partial "pre-loading.html" . }}
+
+<div id="landingpage" style="display: none;">
+  <section class="landingpage-slogan-mask">
+      <div class="container">
+          <img class="logo" src="/images/tidb-logo.png" alt="TiDB">
+          <h2 class="slogan">SQL at SCALE</h2>
+          <h3 class="tagline">TiDB, an open source distributed HTAP database.</h3>
+          <p class="desc">
+              Inspired by Google Spanner/F1, PingCAP develops TiDB, an open source distributed Hybrid Transactional/Analytical Processing (HTAP) database. TiDB features infinite horizontal scalability, strong consistency, and high availability. The goal of TiDB
+              is to serve as a one-stop solution for online transactions and analysis.
+          </p>
+          <div class="buttons">
+              <a href="/docs" class="btn btn-primary f-fl" target="_blank"> GET STARTED </a>
+              <a href="http://github.com/pingcap" class="btn btn-github f-fl" target="_blank"> GitHub </a>
+          </div>
+      </div>
+  </section>
+  <section class="landingpage-features">
+      <div class="container">
+          <div class="row row-1">
+              <div class="item">
+                  <div class="image-wrap">
+                      <span class="icon">{{ partial "svgs/icon-opensource.svg" (dict "fill" "#fff" "width" 34 "height" 31 ) }}</span>
+                  </div>
+                  <h3>OPEN SOURCE</h3>
+                  <p>Born and bred in the community, TiDB is one of the most famous open source distributed databases.</p>
+              </div>
+              <div class="item item-long">
+                  <div class="image-wrap">
+                      <span class="icon">{{ partial "svgs/icon-sql.svg" (dict "fill" "#fff" "width" 36 "height" 29 ) }}</span>
+                  </div>
+                  <h3>MYSQL COMPATIBILITY</h3>
+                  <p>Use TiDB as a scalable MySQL. You can replace MySQL with TiDB to power your application without changing a single line of code in most cases.</p>
+              </div>
+              <div class="item item-long">
+                  <div class="image-wrap">
+                      <span class="icon">{{ partial "svgs/icon-transaction.svg" (dict "fill" "#fff" "width" 34 "height" 26 ) }}</span>
+                  </div>
+                  <h3>DISTRIBUTED TRANSACTION</h3>
+                  <p>Think of TiDB as a standalone RDBMS. You can start a transaction that crosses multiple machines without worrying about consistency. </p>
+              </div>
+          </div>
+          <div class="row">
+              <div class="item">
+                  <div class="image-wrap">
+                      <span class="icon">{{ partial "svgs/icon-failover.svg" (dict "fill" "#fff" "width" 34 "height" 32 ) }}</span>
+                  </div>
+                  <h3>AUTOMATIC FAILOVER </h3>
+                  <p>TiDB automatically handles malfunctions and protects your applications from machine failures or even downtime of an entire data-center. </p>
+              </div>
+              <div class="item">
+                  <div class="image-wrap">
+                      <span class="icon">{{ partial "svgs/icon-ddl.svg" (dict "fill" "#fff" "width" 34 "height" 30 ) }}</span>
+                  </div>
+                  <h3>ONLINE DDL</h3>
+                  <p>Evolve TiDB schemas as your requirement changes. You can add new columns and indices without stopping or affecting the on-going operations.</p>
+              </div>
+              <div class="item">
+                  <div class="image-wrap">
+                      <span class="icon">{{ partial "svgs/icon-time.svg" (dict "fill" "#fff" "width" 34 "height" 34 ) }}</span>
+                  </div>
+                  <h3>24/7 Service</h3>
+                  <p>A professional technical support team is always ready to respond to your request.</p>
+              </div>
+          </div>
+      </div>
+  </section>
+  <section class="landingpage-advantages">
+      <div class="container">
+          <div class="row">
+              <div class="image-wrap">
+                  <img src="https://download.pingcap.com/images/diamond.png" alt="HORIZONTAL SCALING">
+              </div>
+              <div class="content">
+                  <div class="text">
+                      <h3 class="title">HORIZONTAL SCALING</h3>
+                      <h4 class="subtitle">GO BEYOND YOUR LIMITS, IN DATA AND IN BUSINESS</h4>
+                      <p class="desc">Your business grows, so does your data. TiDB’s horizontal scalability enables the growth of a database by simply adding a new node to the cluster. You can expand your business without worrying about your infrastructure.</p>
+                  </div>
+              </div>
+          </div>
+          <div class="row">
+              <div class="image-wrap">
+                  <img src="https://download.pingcap.com/images/DNA.png" alt="HIGH AVAILIBILITY">
+              </div>
+              <div class="content">
+                  <div class="text">
+                      <h3 class="title">HIGH AVAILIBILITY</h3>
+                      <h4 class="subtitle">YOUR DATA IS AN ALWAYS-ON ASSET</h4>
+                      <p class="desc">Your data and applications are always-on. All the outages are transparent to your applications and your data can recover automatically.</p>
+                  </div>
+              </div>
+          </div>
+          <div class="row">
+              <div class="image-wrap">
+                  <img src="https://download.pingcap.com/images/rocket.png" alt="CONSISTENT DISTRIBUTED TRANSACTION">
+              </div>
+              <div class="content">
+                  <div class="text">
+                      <h3 class="title">CONSISTENT DISTRIBUTED TRANSACTION</h3>
+                      <h4 class="subtitle">NO MORE COMPROMISES, NO MORE EVENTUAL CONSISTENCY</h4>
+                      <p class="desc">Finally, your data is consistent from anywhere at any time. With a strong consistency guarantee, TiDB empowers your data scientists to focus on building great applications that create business values.</p>
+                  </div>
+              </div>
+          </div>
+          <div class="row">
+              <div class="image-wrap">
+                  <img src="https://download.pingcap.com/images/package.png" alt="EASE OF USE">
+              </div>
+              <div class="content">
+                  <div class="text">
+                      <h3 class="title">EASE OF USE</h3>
+                      <h4 class="subtitle">ROCK YOUR DATA AS YOU DO IN MYSQL</h4>
+                      <p class="desc">Use TiDB as MySQL. You can replace MySQL with TiDB to power your application without changing a single line of code in most cases. Whether it’s online or offline, your data can be migrated to TiDB safely without affecting your ongoing
+                          operations.
+                      </p>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+</div>
 {{ end }}
