--- a/src/less/index.less
+++ b/src/less/index.less
@@ -24,30 +24,22 @@
 // others
 @line_height: 1.8;
 
+// animation_fadein
+@animation_fadein: fadeIn 0.6s;
+
 /* Section 1 */
 .landingpage-slogan-mask {
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 100%;
-  height: 100%;
-  min-height: 100vh;
+  height: 100vh;
   padding: calc(~'@{vertical_padding} + @{header_height}') 0;
   background: url('/images/slogan-mask.png') no-repeat center top;
   background-attachment: fixed;
   background-size: cover;
-  animation: fadeInRight 0.5s;
-  @keyframes fadeInRight {
-    from {
-      opacity: 0;
-      transform: translate3d(100%, 0, 0);
-    }
-    to {
-      opacity: 1;
-      transform: none;
-    }
-  }
-
+  .customAnimation(@animation_fadein);
+  
   .container {
     flex-direction: column;
     padding: 0 @horizontal_padding;
