polish: optimize loading style

--- a/layouts/page/index-cn.html
+++ b/layouts/page/index-cn.html
@@ -5,12 +5,15 @@
   {{$.Scratch.Set "data_i18_link" "/en" }}
   <style type="text/css" media="screen">
       body {
+          height: 100%;
           background-image: linear-gradient(to top, #080000, #100f2e) !important;
           color: #fff !important;
       }
-
+      body header {
+        display: none;
+      }
       body p {
-        font-family: 'Lato Light' !important;
+        /*font-family: 'Lato Light' !important;*/
         font-weight: 300 !important;
       }
   </style>
