--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -2,13 +2,16 @@
   {{$.Scratch.Set "data_i18_link" "/index.html" }}
   <style type="text/css" media="screen">
       body {
-          background-image: linear-gradient(to top, #080000, #100f2e) !important;
-          color: #fff !important;
+        height: 100%;
+        background-image: linear-gradient(to top, #080000, #100f2e) !important;
+        color: #fff !important;
       }
-
+      body header {
+        display: none;
+      }
       body p {
-          font-family: 'Lato Light' !important;
-          font-weight: 300 !important;
+        font-family: 'Lato Light' !important;
+        font-weight: 300 !important;
       }
   </style>
 {{ end }}
