--- a/layouts/partials/pre-loading.html
+++ b/layouts/partials/pre-loading.html
@@ -16,6 +16,7 @@
   window.onload = function() {
     setTimeout(()=>{
       document.getElementById('loading').setAttribute('style', 'display: none;');
+      document.getElementById('header').setAttribute('style', 'display: block;');
       document.getElementById('landingpage').setAttribute('style', 'display: block;');
     },600);
   };
