polish: optimize index and doc page layout in mobile

--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -249,6 +249,8 @@
     .archive {
       flex-basis: 100%;
       margin: 30px 0;
+      padding-left: 5px;
+      padding-right: 5px;
     }
     .sidebar {
       flex: 100%;
