--- a/src/less/index.less
+++ b/src/less/index.less
@@ -39,7 +39,7 @@
   background-attachment: fixed;
   background-size: cover;
   .customAnimation(@animation_fadein);
-  
+
   .container {
     flex-direction: column;
     padding: 0 @horizontal_padding;
@@ -258,6 +258,10 @@
     align-items: center;
     text-align: center;
   }
+  .landingpage-slogan-mask .tagline {
+    margin-bottom: 1.2rem;
+    font-size: 1rem;
+  }
   .landingpage-slogan-mask .buttons {
     max-width: 100%;
     width: 90%;
@@ -277,6 +281,7 @@
     justify-content: center;
     flex-wrap: wrap;
     .content {
+      padding: 0;
       text-align: center;
     }
   }
@@ -289,5 +294,12 @@
   .landingpage-slogan-mask .buttons {
     flex-direction: column;
     align-items: center;
+    .btn {
+      margin-top: 4rem;
+    }
+  }
+
+  .landingpage-features {
+    padding: 10rem 0;
   }
 }
