chore: update recruit en version i18n copyright

--- a/layouts/recruit/single.html
+++ b/layouts/recruit/single.html
@@ -8,7 +8,7 @@
   <div class="container">
       <div class="sidebar">
         <div class="sticky-sidebar">
-          <h1 class="title"> 招聘职位 </h1>
+          <h1 class="title"> Open Jobs </h1>
           <div class="st_tree nav-toc" style="display: none;">
             {{ partial "navs/tree-nav.html" (dict "tree" .Site.Data.recruit_toc "global" .) }}
           </div>
@@ -22,7 +22,7 @@
               <a href="mailto:hire@pingcap.com">
                 <i class="icon icon-mail">
                   {{ partial "svgs/icon-feedback.svg" (dict "fill" "#040000" "width" 22 "height" 17 ) }}
-                </i>投个简历吧
+                </i>Join Us
               </a>
             </div>
           </div>
