Polish/docs page height (#1)
* build: checkout new branch for preview and change branches for preview

* polish: change docs page min-height

* build: revert from preview branch

--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -23,7 +23,7 @@
 .weekly,
 .meetup,
 .recruit {
-  min-height: calc(~'100vh - 200px');
+  min-height: calc(~'100vh - @{footer_height_pc}');
 
   .container {
     padding: 0 @horizontal_padding;
@@ -40,6 +40,7 @@
   .sidebar,
   .sidebar-page {
     flex: 0 0 @sidebar_width;
+    min-height: calc(~'100vh - @{footer_height_pc}');
   }
 
   .sidebar-page {
