--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -1,6 +1,7 @@
 /* footer module */
 @import './base.less';
 //height
+@footer_height_pc: 200px;
 @input_height: 2rem;
 @pingcap_logo_height: 1.8rem;
 @btn_subscribe_width: 4.5rem;
@@ -149,6 +150,12 @@
         }
       }
     }
+  }
+}
+
+@media (min-width: 600px) {
+  .footer {
+    height: @footer_height_pc;
   }
 }
 
