--- a/layouts/partials/head/meta.html
+++ b/layouts/partials/head/meta.html
@@ -2,10 +2,10 @@
 <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 <link rel="canonical" href="https://www.pingcap.com/">
-<link rel="alternate" type="application/rss+xml" title="RSS" href="rss/feed.xml" />
-<!-- 添加 RSS 订阅 -->
+<link rel="alternate" type="application/rss+xml" title="RSS" href="/blog/index.xml" />
 <meta name="description" content="PingCAP is focused on developing distributed NewSQL and is the team building TiDB, an open-source distributed NewSQL database.">
 <meta name="robots" content="noodp">
+<meta name="keywords" content="SQL, HTAP, Open Source, Cloud-Native, NewSQL">
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="website">
 <meta property="og:title" content="PingCAP">
